# video-search

gui/: package.json
gui/src/: App.tsx
gui/src/app/: store.ts
gui/src/components/: Video.tsx  VideoSelectionPanel.tsx
gui/src/features/videos/: videosSlice.spec.ts  videosSlice.ts
server/: Untitled.ipynb  app.py  encode.py  pyproject.toml  requirements.txt
server/videostore/: videostore.py
